argocd/apps/infra/monitoring/uptime-kuma/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-httproute
  labels:
    app.kubernetes.io/instance: uptime-kuma
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/name: VictoriaMetrics
  #   gethomepage.dev/icon: victoriametrics
  #   gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring solution and time series database."
  #   gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
  # name: vm-httproute
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      sectionName: https
  hostnames:
    - kuma.yanello.net
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
